# SAPEIClient

./: CMakeLists.txt  README.md  addcarddialog.cpp  addcarddialog.h  addcarddialog.ui  addvehicledialog.cpp  addvehicledialog.h  addvehicledialog.ui  balancehandler.cpp  balancehandler.h  balancehandlerdialog.ui  clientlistdialog.cpp  clientlistdialog.h  clientlistdialog.ui  editclientdialog.cpp  editclientdialog.h  editclientdialog.ui  editvehicledialog.cpp  editvehicledialog.h  editvehicledialog.ui  install_dependencies.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  serialhandler.cpp  serialhandler.h  vehiclelistdialog.cpp  vehiclelistdialog.h  vehiclelistdialog.ui
.github/: dependabot.yml
docs/html/: addcarddialog_8h.html  addcarddialog_8h__incl.map  addcarddialog_8h__incl.md5  addcarddialog_8h_source.html  annotated.html  classAddCardDialog-members.html  classAddCardDialog.html  classAddCardDialog__coll__graph.map  classAddCardDialog__coll__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classSerialHandler-members.html  classSerialHandler.html  classSerialHandler__coll__graph.md5  classSerialHandler__inherit__graph.map  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  mainwindow_8h.html  mainwindow_8h__incl.map  mainwindow_8h__incl.md5  mainwindow_8h_source.html  menudata.js  serialhandler_8h.html  serialhandler_8h__dep__incl.map  serialhandler_8h__dep__incl.md5  (+3 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_2.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: addcarddialog_8h.tex  addcarddialog_8h__incl.md5  addcarddialog_8h_source.tex  annotated.tex  classAddCardDialog.tex  classAddCardDialog__coll__graph.md5  classMainWindow.tex  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.md5  classSerialHandler.tex  classSerialHandler__inherit__graph.md5  files.tex  hierarchy.tex  mainwindow_8h.tex  mainwindow_8h__incl.md5  mainwindow_8h_source.tex  refman.aux  refman.idx  refman.tex  refman.toc  serialhandler_8h.tex  serialhandler_8h__dep__incl.md5  serialhandler_8h__incl.md5  serialhandler_8h_source.tex
